# StudySmart

./: .firebaserc  .gitignore  README.md  firebase.json  firestore.rules
backend/: .env.example  .gitignore  README.md  analytics.py  auth.py  firebase_admin_init.py  firestore_repo.py  forum.py  main.py  pyproject.toml  requirements.txt
frontend/: .env.example  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/role-mismatch/: page.tsx
frontend/src/app/select-role/: page.tsx
frontend/src/app/student/: layout.tsx
frontend/src/app/student/chat/: page.tsx
frontend/src/app/student/dashboard/: page.tsx
frontend/src/app/student/digitize/: page.tsx
frontend/src/app/student/forum/: page.tsx
frontend/src/app/student/forum/[id]/: page.tsx
frontend/src/app/student/generator/: page.tsx
frontend/src/app/student/materials/: page.tsx
frontend/src/app/teacher/: layout.tsx
frontend/src/app/teacher/chat/: page.tsx
frontend/src/app/teacher/dashboard/: page.tsx
frontend/src/app/teacher/digitize/: page.tsx
frontend/src/app/teacher/forum/: page.tsx
frontend/src/app/teacher/generator/: page.tsx
frontend/src/app/teacher/materials/: page.tsx
frontend/src/app/teacher/students/: page.tsx
frontend/src/components/: auth-gate.tsx  digitize-tool.tsx
frontend/src/components/ui/: button.tsx  command.tsx  input.tsx  select.tsx  textarea.tsx
frontend/src/lib/: api.ts  auth-context.tsx  firebase.ts  role-routing.ts
(+1 files in other folders)
